Bug 79186 - Re-saving DOC with table running over page end breaks layout (table header on 1st page; vertically aligned text influences cells on 2nd page; remainder on 3rd page)
Summary: Re-saving DOC with table running over page end breaks layout (table header on...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.6.2 release
Hardware: Other All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.4.0
Keywords: filter:doc
Depends on:
Blocks: DOC-Tables layoutInCell
  Show dependency treegraph
 
Reported: 2014-05-24 17:02 UTC by Andreas K. Hüttel
Modified: 2024-08-26 10:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
ZIP of PDFs showing before/after rendering under LOv4162, LOv4263, LOv4322, LOv4400 (1.60 MB, application/zip)
2014-09-28 12:54 UTC, Owen Genat (retired)
Details
reisekostenabrechnung.doc (138.50 KB, application/msword)
2015-12-04 16:51 UTC, Buovjaga
Details
reisekostenabrechnung.docx (33.14 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-02-06 21:20 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas K. Hüttel 2014-05-24 17:02:50 UTC
LibreOffice 4.2.3.3 (Gentoo packages)

Please have a look at this .doc document.

http://www.uni-regensburg.de/verwaltung/medien/formulare/personalabteilung/reisekosten-auszahlungsanordnung.doc

It can be loaded without problems, but saving it as .doc again destroys the table layout (page 2 is distributed over two pages). (Verified both with LO and MS Word)

Saving as .odt and re-loading into LO works fine.

This PDF
http://www.uni-regensburg.de/verwaltung/medien/formulare/personalabteilung/reisekosten-auszahlungsanordnung.pdf

shows how things are supposed to look like...
Comment 1 V Stuart Foote 2014-05-25 02:34:10 UTC
Confirmed. The round-trip with save copy from .DOC -> .ODT -> and save copy back to .DOC

The opening of the .DOC file retains formatting of original and as in the PDF.

The opening of the .ODT copy retains formatting of original and as in the PDF.

Saving from the .ODT to .DOC corrupts the formatting.
Comment 2 Cor Nouws 2014-07-06 08:45:17 UTC
(probably much older issue then 4.2.3 ...)
Comment 3 Owen Genat (retired) 2014-09-28 12:54:51 UTC
Created attachment 107003 [details]
ZIP of PDFs showing before/after rendering under LOv4162, LOv4263, LOv4322, LOv4400

Originally provided DOC opened under GNU/Linux using:

- v3.3.4.1 OOO330m19 Build: 401
- v3.4.6.2 OOO340m1 Build: 602
- v3.5.7.2 Build ID: 3215f89-f603614-ab984f2-7348103-1225a5b
- v3.6.7.2 Build ID: e183d5b
- v4.0.6.2 Build ID: 2e2573268451a50806fcd60ae2d9fe01dd0ce24
- v4.1.6.2 Build ID: 40ff705089295be5be0aae9b15123f687c05b0a
- v4.2.6.3 Build ID: 3fd416d4c6db7d3204c17ce57a1d70f6e531ee21
- v4.3.2.2 Build ID: edfb5295ba211bd31ad47d0bad0118690f76407d
- v4.4.0.0.alpha0+ Build ID: df73f4115cfe4d07e4159adf087571687eb173ec TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-09-25_23:06:16

Rendering on open under v3.3-3.6 are all problematic. Rendering on open under v4.0-4.3 show the table as expected. Rendering on open under v4.4 appears to have regressed to earlier problematic rendering. 

Saving the DOC under v4.1-4.3 in all cases results in the table being broken once more. Refer attached PDFs.
Comment 4 Owen Genat (retired) 2014-09-28 13:01:49 UTC
Summary amended for clarity. Component set to Writer. Version set to 4.1.6.2 as a result of comment 3.
Comment 5 QA Administrators 2015-10-14 19:57:14 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2015-12-04 16:51:54 UTC
Created attachment 121023 [details]
reisekostenabrechnung.doc

Link did not work, found this from same domain. Maybe it is the same?
Still showing the problem.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 81fa5340191baf8687f9c82f1f414f5afc86b529
Threads 4; Ver: Windows 6.1; Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-03_21:19:19
Locale: fi-FI (fi_FI)
Comment 7 QA Administrators 2018-10-02 02:53:54 UTC Comment hidden (obsolete)
Comment 8 Timur 2020-02-06 21:14:25 UTC Comment hidden (me-too)
Comment 9 Timur 2020-02-06 21:20:06 UTC
Created attachment 157712 [details]
reisekostenabrechnung.docx

Repro 7.0+ with DOC attachment 121023 [details], 2 pages open as 4.
Note: if DOC is saved in MSO 2013 as DOCX (I attach it here), MSO itself open it as 4 pages, looking like LO's DOC.
Which shouldn't prevent us from fixing this DOC, "just saying".
Comment 10 QA Administrators 2022-02-06 03:44:05 UTC Comment hidden (obsolete, spam)
Comment 11 Timur 2022-02-06 09:49:52 UTC
Hi Justin, please see you can, regarding comment 9.
Comment 12 Justin L 2022-02-07 06:05:15 UTC
Not surprisingly, the problem is with the vertical textbox (or whatever it is) on the left. In the initial document, the position's "Keep inside text boundaries" is off, but on the round-trip that checkbox is turned on.
Comment 13 Commit Notification 2022-02-09 07:20:17 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/19a5e50955ecc8da7ff5dbdfb9f47352d851ee1d

related tdf#79186 filter: value is more than just LayoutInCell

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2022-02-10 08:12:47 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98ecef56d0f87cd922ca560fead4e2533b30d57c

tdf#79186 ww8export: save LayoutInCell property

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.