tdf#79186 ww8export: save LayoutInCell property

This property was saved in DOCX, but not in DOC format.
The field can hold 16 values, even though we only handle
this one on import.

This patch depends on the previous patch which re-worked
the import side to default to "true".

Since the default is to LayoutInCell, I don't see
any reason to add this property when true.
The only reason would be if this property can be
inherited from somewhere else, and a true needs
to override the inheritance, but I'm not aware
that such an inheritance exists in this case.

Change-Id: If42f7b1dc49c69a69552e841b93576f638b6d1d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129658
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>